@@ -1,3 +1,9 @@
+2016-05-31  Jan Hubicka  <hubicka@ucw.cz>
+
+	* g++.d/predict-lop-exit-1.C: Update template for new predictor name.
+	* g++.d/predict-lop-exit-2.C: Update template for new predictor name.
+	* g++.d/predict-lop-exit-2.C: Update template for new predictor name.
+
 2016-05-31  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/71248
